Add form & first name input

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic login page with JS</title>
+    <script src="script.js"></script>
 </head>
 <body>
+
+    <form action="" name="signInForm">
+        <label for="FirsName">First Name:</label><br>
+        <input type="text" id="FirsName" name="Name">
+    </form>
     
 </body>
 </html>
